Add game setup and marking functions

--- a/index.html
+++ b/index.html
@@ -7,27 +7,15 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <!-- <div class="game-container">
-      <button>1 Player</button>
-      <button>2 Players</button>
-    </div> -->
-    <div class="game-container">
-      <div class="row">
-        <div class="unit"></div><!--
-     --><div class="unit"></div><!--
-     --><div class="unit"></div><!--
-   --></div>
-      <div class="row"><!--
-     --><div class="unit"></div><!--
-     --><div class="unit"></div><!--
-     --><div class="unit"></div><!--
-   --></div>
-      <div class="row"><!--
-     --><div class="unit"></div><!--
-     --><div class="unit"></div><!--
-     --><div class="unit"></div><!--
-   --></div><!--
- --></div>
+    <header>
+      <h1>TicTacToe!</h1>
+    </header>
+    <div id="main-container">
+      <div id="prompt">
+        <button id="one-player-button">1 Player</button>
+        <button id="two-players-button">2 Players</button>
+      </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
